include $(top_srcdir)/build-aux/Makefile.am.common

# button
button_DATA=\
  images/pauseButton.png\
  images/playButton.png\
  images/stopButton.png\
  $(NULL)

# contextmanager
contextmanager_DATA=\
  contextmanager/users.ini\
  contextmanager/contexts.ini\
  $(NULL)

# font
font_DATA=\
  fonts/decker.ttf\
  fonts/vera.ttf\
  $(NULL)

# formatter
formatter_DATA=\
  formatter/ctrldefs.ini\
  formatter/mimedefs.ini\
  $(NULL)

formatterimg_DATA=\
  formatterimg/loading.png\
  formatterimg/b1.png\
  formatterimg/b2.png\
  formatterimg/b3.png\
  formatterimg/b4.png\
  formatterimg/b6.png\
  formatterimg/b5.png\
  formatterimg/b7.png\
  formatterimg/b8.png\
  $(NULL)

formattermd_DATA=\
  formattermd/active-device-reset.png\
  formattermd/active-device.png\
  $(NULL)

# ini
INTERNAL_DELIM= "/"
FOREIGN_DELIM= "\\\\"
INSTALL_PREFIX= "$(pkgdatadir)"
FILES_PREFIX= "$(pkgdatadir)"

pkgdata_DATA=\
  ini/mimetypes.ini\
  $(NULL)

# mb
mb_DATA=\
  mb/input.cfg\
  $(NULL)

# tuner
tuner_DATA=\
  tuner/tuner.ini\
  tuner/isdbt.ini\
  tuner/tuning.png\
  $(NULL)
