# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4
LIBS =
SUBDIRS = 	include/cm include/cm/component include/cm/parser \
		include/cm/assembler \
		src \
		src/component \
		src/assembler \
		src/parser \
		files \
		test
