# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4
LIBS =
SUBDIRS =	include/dataprocessing \
		include/dataprocessing/dsmcc \
		include/dataprocessing/dsmcc/npt \
		include/dataprocessing/dsmcc/carousel/object \
		include/dataprocessing/ncl \
		include/dataprocessing/ncl/edit \
    		src \
    		src/ncl \
    		src/ncl/edit \
    		test
